tests/baselines/reference/genericTypeAssertions5.js
//// [genericTypeAssertions5.js]
var a;
var b;
var c;

function foo2(x) {
    var y = x;
    y = a; // error: cannot convert A to T
    y = b; // error: cannot convert B to T
    y = c; // error: cannot convert C to T
    y = a;
    y = b; // error: cannot convert B to T
    y = c; // error: cannot convert C to T
}
